UnionIsacc&Ale/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SP_OBJECTIVE_OPEN
    INTERACTION_ID
    POLICY_ID
    NODE_ID
    SP_OBJECTIVE_CLOSE
    GENERAL_COMMENT

Grammar

Rule 0     S' -> doc_model
Rule 1     doc_model -> XML_VERSION doc_model
Rule 2     doc_model -> doc_comment doc_model
Rule 3     doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
Rule 4     office_model -> OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE
Rule 5     model_nodes -> MODEL_NODES_OPEN model_node model_nodes
Rule 6     model_nodes -> model_node model_nodes
Rule 7     model_nodes -> MODEL_NODES_CLOSE
Rule 8     model_node -> MODEL_NODE_OPEN model_node
Rule 9     model_node -> basic_info model_node
Rule 10    model_node -> threats model_node
Rule 11    model_node -> structure_security_policies model_node
Rule 12    model_node -> structure_security_relationships model_node
Rule 13    model_node -> MODEL_NODE_CLOSE
Rule 14    basic_info -> BASIC_INFORMATION_OPEN basic_info
Rule 15    basic_info -> component_name basic_info
Rule 16    basic_info -> component_overview basic_info
Rule 17    basic_info -> component_categories basic_info
Rule 18    basic_info -> intrinsical_properties basic_info
Rule 19    basic_info -> other_details basic_info
Rule 20    basic_info -> BASIC_INFORMATION_CLOSE
Rule 21    component_name -> COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
Rule 22    intrinsical_properties -> INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
Rule 23    intrinsical_properties -> properties_color intrinsical_properties
Rule 24    intrinsical_properties -> properties_material intrinsical_properties
Rule 25    intrinsical_properties -> properties_height intrinsical_properties
Rule 26    intrinsical_properties -> properties_weight intrinsical_properties
Rule 27    intrinsical_properties -> INTRINSICAL_PROPERTIES_CLOSE
Rule 28    component_categories -> COMPONENT_CATEGORIES_OPEN component_categories
Rule 29    component_categories -> component_category component_categories
Rule 30    component_categories -> COMPONENT_CATEGORIES_CLOSE
Rule 31    component_overview -> COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
Rule 32    other_details -> PROPERTIES_OTHER_OPEN PROPERTIES_OTHER_CLOSE
Rule 33    component_category -> COMPONENT_CATEGORY_OPEN COMPONENT_CATEGORY_CLOSE
Rule 34    properties_color -> PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
Rule 35    properties_material -> PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
Rule 36    properties_height -> PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
Rule 37    properties_weight -> PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
Rule 38    threats -> THREATS_OPEN threats
Rule 39    threats -> threat threats
Rule 40    threats -> THREATS_CLOSE
Rule 41    threat -> THREAT_OPEN threat
Rule 42    threat -> threat_name threat
Rule 43    threat -> threat_description threat
Rule 44    threat -> threat_vulnerabilities threat
Rule 45    threat -> THREAT_CLOSE
Rule 46    threat_name -> THREAT_NAME_OPEN str THREAT_NAME_CLOSE
Rule 47    threat_description -> THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
Rule 48    threat_vulnerabilities -> THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
Rule 49    threat_vulnerabilities -> threat_vulnerability threat_vulnerabilities
Rule 50    threat_vulnerabilities -> THREAT_VULNERABILITIES_CLOSE
Rule 51    threat_vulnerability -> VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE
Rule 52    structure_security_policies -> SECURITY_POLICIES_OPEN security_policies SECURITY_POLICIES_CLOSE
Rule 53    security_policies -> security_policies security_policies
Rule 54    security_policies -> security_policy
Rule 55    security_policy -> SECURITY_POLICY_OPEN ID GENERAL_CLOSE POLICY_NAME_OPEN STRING POLICY_NAME_CLOSE POLICY_DESCRIPTION_OPEN STRING POLICY_DESCRIPTION_CLOSE security_objectives_SP additional_info_SP SECURITY_POLICY_CLOSE
Rule 56    security_objectives_SP -> SP_OBJECTIVES_OPEN SECURITY_OBJECTIVE_OPEN STRING SECURITY_OBJECTIVE_CLOSE SP_OBJECTIVES_CLOSE
Rule 57    additional_info_SP -> SP_ADDITIONAL_INFORMATION_OPEN SP_COMMENT_OPEN SP_COMMENT_CLOSE SP_ADDITIONAL_INFORMATION_CLOSE
Rule 58    structure_security_relationships -> SECURITY_RELATIONSHIP_OPEN security-relationships SECURITY_RELATIONSHIP_CLOSE
Rule 59    security-relationships -> security-relationships security-relationships
Rule 60    security-relationships -> LINKED_NODE_OPEN ID GENERAL_CLOSE linked-node LINKED_NODE_CLOSE
Rule 61    linked-node -> linked-node linked-node
Rule 62    linked-node -> RELATIONSHIP_TYPE_OPEN ID GENERAL_CLOSE relationship-type RELATIONSHIP_TYPE_CLOSE
Rule 63    relationship-type -> SECURITY_OBJECTIVES_OPEN security-objectives_SR SECURITY_OBJECTIVES_CLOSE
Rule 64    security-objectives_SR -> security-objectives_SR security-objectives_SR
Rule 65    security-objectives_SR -> SECURITY_OBJECTIVE_OPEN security-objective_SR security-objective_SR SECURITY_OBJECTIVE_CLOSE
Rule 66    security-objective_SR -> SELF_OBJECTIVE_OPEN SELF_OBJECTIVE_CLOSE
Rule 67    security-objective_SR -> PEER_OBJECTIVE_OPEN PEER_OBJECTIVE_CLOSE
Rule 68    doc_comment -> COMMENT_OPEN doc_comment
Rule 69    doc_comment -> str doc_comment
Rule 70    doc_comment -> GENERAL_CLOSE
Rule 71    str -> STRING str
Rule 72    str -> STRING
Rule 73    str -> <empty>

Terminals, with rules where they appear

BASIC_INFORMATION_CLOSE : 20
BASIC_INFORMATION_OPEN : 14
COMMENT_OPEN         : 68
COMPONENT_CATEGORIES_CLOSE : 30
COMPONENT_CATEGORIES_OPEN : 28
COMPONENT_CATEGORY_CLOSE : 33
COMPONENT_CATEGORY_OPEN : 33
COMPONENT_NAME_CLOSE : 21
COMPONENT_NAME_OPEN  : 21
COMPONENT_OVERVIEW_CLOSE : 31
COMPONENT_OVERVIEW_OPEN : 31
GENERAL_CLOSE        : 55 60 62 70
GENERAL_COMMENT      : 
ID                   : 55 60 62
INTERACTION_ID       : 
INTRINSICAL_PROPERTIES_CLOSE : 27
INTRINSICAL_PROPERTIES_OPEN : 22
LINKED_NODE_CLOSE    : 60
LINKED_NODE_OPEN     : 60
MODEL_NODES_CLOSE    : 7
MODEL_NODES_OPEN     : 5
MODEL_NODE_CLOSE     : 13
MODEL_NODE_OPEN      : 8
NODE_ID              : 
OFFICE_DOCUMENT_CLOSE : 3
OFFICE_DOCUMENT_OPEN : 3
OFFICE_MODEL_CLOSE   : 4
OFFICE_MODEL_OPEN    : 4
PEER_OBJECTIVE_CLOSE : 67
PEER_OBJECTIVE_OPEN  : 67
POLICY_DESCRIPTION_CLOSE : 55
POLICY_DESCRIPTION_OPEN : 55
POLICY_ID            : 
POLICY_NAME_CLOSE    : 55
POLICY_NAME_OPEN     : 55
PROPERTIES_COLOR_CLOSE : 34
PROPERTIES_COLOR_OPEN : 34
PROPERTIES_HEIGHT_CLOSE : 36
PROPERTIES_HEIGHT_OPEN : 36
PROPERTIES_MATERIAL_CLOSE : 35
PROPERTIES_MATERIAL_OPEN : 35
PROPERTIES_OTHER_CLOSE : 32
PROPERTIES_OTHER_OPEN : 32
PROPERTIES_WEIGHT_CLOSE : 37
PROPERTIES_WEIGHT_OPEN : 37
RELATIONSHIP_TYPE_CLOSE : 62
RELATIONSHIP_TYPE_OPEN : 62
SECURITY_OBJECTIVES_CLOSE : 63
SECURITY_OBJECTIVES_OPEN : 63
SECURITY_OBJECTIVE_CLOSE : 56 65
SECURITY_OBJECTIVE_OPEN : 56 65
SECURITY_POLICIES_CLOSE : 52
SECURITY_POLICIES_OPEN : 52
SECURITY_POLICY_CLOSE : 55
SECURITY_POLICY_OPEN : 55
SECURITY_RELATIONSHIP_CLOSE : 58
SECURITY_RELATIONSHIP_OPEN : 58
SELF_OBJECTIVE_CLOSE : 66
SELF_OBJECTIVE_OPEN  : 66
SP_ADDITIONAL_INFORMATION_CLOSE : 57
SP_ADDITIONAL_INFORMATION_OPEN : 57
SP_COMMENT_CLOSE     : 57
SP_COMMENT_OPEN      : 57
SP_OBJECTIVES_CLOSE  : 56
SP_OBJECTIVES_OPEN   : 56
SP_OBJECTIVE_CLOSE   : 
SP_OBJECTIVE_OPEN    : 
STRING               : 55 55 56 71 72
THREATS_CLOSE        : 40
THREATS_OPEN         : 38
THREAT_CLOSE         : 45
THREAT_DESCRIPTION_CLOSE : 47
THREAT_DESCRIPTION_OPEN : 47
THREAT_NAME_CLOSE    : 46
THREAT_NAME_OPEN     : 46
THREAT_OPEN          : 41
THREAT_VULNERABILITIES_CLOSE : 50
THREAT_VULNERABILITIES_OPEN : 48
VULNERABILITIES_VULNERABILITY_CLOSE : 51
VULNERABILITIES_VULNERABILITY_OPEN : 51
XML_VERSION          : 1
error                : 

Nonterminals, with rules where they appear

additional_info_SP   : 55
basic_info           : 9 14 15 16 17 18 19
component_categories : 17 28 29
component_category   : 29
component_name       : 15
component_overview   : 16
doc_comment          : 2 68 69
doc_model            : 1 2 0
intrinsical_properties : 18 22 23 24 25 26
linked-node          : 60 61 61
model_node           : 5 6 8 9 10 11 12
model_nodes          : 4 5 6
office_model         : 3
other_details        : 19
properties_color     : 23
properties_height    : 25
properties_material  : 24
properties_weight    : 26
relationship-type    : 62
security-objective_SR : 65 65
security-objectives_SR : 63 64 64
security-relationships : 58 59 59
security_objectives_SP : 55
security_policies    : 52 53 53
security_policy      : 54
str                  : 21 31 34 35 36 37 46 47 51 69 71
structure_security_policies : 11
structure_security_relationships : 12
threat               : 39 41 42 43 44
threat_description   : 43
threat_name          : 42
threat_vulnerabilities : 44 48 49
threat_vulnerability : 49
threats              : 10 38 39

Parsing method: LALR

state 0

    (0) S' -> . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (68) doc_comment -> . COMMENT_OPEN doc_comment
    (69) doc_comment -> . str doc_comment
    (70) doc_comment -> . GENERAL_CLOSE
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for COMMENT_OPEN resolved as shift
  ! shift/reduce conflict for GENERAL_CLOSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]

    doc_model                      shift and go to state 6
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 1

    (1) doc_model -> XML_VERSION . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (68) doc_comment -> . COMMENT_OPEN doc_comment
    (69) doc_comment -> . str doc_comment
    (70) doc_comment -> . GENERAL_CLOSE
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for COMMENT_OPEN resolved as shift
  ! shift/reduce conflict for GENERAL_CLOSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]

    doc_model                      shift and go to state 9
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 2

    (3) doc_model -> OFFICE_DOCUMENT_OPEN . office_model OFFICE_DOCUMENT_CLOSE
    (4) office_model -> . OFFICE_MODEL_OPEN model_nodes OFFICE_MODEL_CLOSE

    OFFICE_MODEL_OPEN shift and go to state 11

    office_model                   shift and go to state 10

state 3

    (71) str -> STRING . str
    (72) str -> STRING .
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for STRING resolved as shift
  ! reduce/reduce conflict for COMMENT_OPEN resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for GENERAL_CLOSE resolved using rule 72 (str -> STRING .)
  ! shift/reduce conflict for STRING resolved as shift
  ! reduce/reduce conflict for VULNERABILITIES_VULNERABILITY_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for COMPONENT_OVERVIEW_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for PROPERTIES_COLOR_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for THREAT_DESCRIPTION_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for COMPONENT_NAME_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for PROPERTIES_WEIGHT_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for THREAT_NAME_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for PROPERTIES_MATERIAL_CLOSE resolved using rule 72 (str -> STRING .)
  ! reduce/reduce conflict for PROPERTIES_HEIGHT_CLOSE resolved using rule 72 (str -> STRING .)
    COMMENT_OPEN    reduce using rule 72 (str -> STRING .)
    GENERAL_CLOSE   reduce using rule 72 (str -> STRING .)
    COMPONENT_NAME_CLOSE reduce using rule 72 (str -> STRING .)
    THREAT_DESCRIPTION_CLOSE reduce using rule 72 (str -> STRING .)
    PROPERTIES_MATERIAL_CLOSE reduce using rule 72 (str -> STRING .)
    VULNERABILITIES_VULNERABILITY_CLOSE reduce using rule 72 (str -> STRING .)
    COMPONENT_OVERVIEW_CLOSE reduce using rule 72 (str -> STRING .)
    PROPERTIES_COLOR_CLOSE reduce using rule 72 (str -> STRING .)
    PROPERTIES_WEIGHT_CLOSE reduce using rule 72 (str -> STRING .)
    THREAT_NAME_CLOSE reduce using rule 72 (str -> STRING .)
    PROPERTIES_HEIGHT_CLOSE reduce using rule 72 (str -> STRING .)
    STRING          shift and go to state 3

  ! STRING          [ reduce using rule 72 (str -> STRING .) ]
  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]
  ! VULNERABILITIES_VULNERABILITY_CLOSE [ reduce using rule 73 (str -> .) ]
  ! COMPONENT_OVERVIEW_CLOSE [ reduce using rule 73 (str -> .) ]
  ! PROPERTIES_COLOR_CLOSE [ reduce using rule 73 (str -> .) ]
  ! THREAT_DESCRIPTION_CLOSE [ reduce using rule 73 (str -> .) ]
  ! COMPONENT_NAME_CLOSE [ reduce using rule 73 (str -> .) ]
  ! PROPERTIES_WEIGHT_CLOSE [ reduce using rule 73 (str -> .) ]
  ! THREAT_NAME_CLOSE [ reduce using rule 73 (str -> .) ]
  ! PROPERTIES_MATERIAL_CLOSE [ reduce using rule 73 (str -> .) ]
  ! PROPERTIES_HEIGHT_CLOSE [ reduce using rule 73 (str -> .) ]

    str                            shift and go to state 12

state 4

    (68) doc_comment -> COMMENT_OPEN . doc_comment
    (68) doc_comment -> . COMMENT_OPEN doc_comment
    (69) doc_comment -> . str doc_comment
    (70) doc_comment -> . GENERAL_CLOSE
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for COMMENT_OPEN resolved as shift
  ! shift/reduce conflict for GENERAL_CLOSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]

    str                            shift and go to state 7
    doc_comment                    shift and go to state 13

state 5

    (2) doc_model -> doc_comment . doc_model
    (1) doc_model -> . XML_VERSION doc_model
    (2) doc_model -> . doc_comment doc_model
    (3) doc_model -> . OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE
    (68) doc_comment -> . COMMENT_OPEN doc_comment
    (69) doc_comment -> . str doc_comment
    (70) doc_comment -> . GENERAL_CLOSE
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for COMMENT_OPEN resolved as shift
  ! shift/reduce conflict for GENERAL_CLOSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    XML_VERSION     shift and go to state 1
    OFFICE_DOCUMENT_OPEN shift and go to state 2
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]

    doc_model                      shift and go to state 14
    str                            shift and go to state 7
    doc_comment                    shift and go to state 5

state 6

    (0) S' -> doc_model .



state 7

    (69) doc_comment -> str . doc_comment
    (68) doc_comment -> . COMMENT_OPEN doc_comment
    (69) doc_comment -> . str doc_comment
    (70) doc_comment -> . GENERAL_CLOSE
    (71) str -> . STRING str
    (72) str -> . STRING
    (73) str -> .

  ! shift/reduce conflict for COMMENT_OPEN resolved as shift
  ! shift/reduce conflict for GENERAL_CLOSE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    COMMENT_OPEN    shift and go to state 4
    GENERAL_CLOSE   shift and go to state 8
    STRING          shift and go to state 3

  ! COMMENT_OPEN    [ reduce using rule 73 (str -> .) ]
  ! GENERAL_CLOSE   [ reduce using rule 73 (str -> .) ]
  ! STRING          [ reduce using rule 73 (str -> .) ]

    str                            shift and go to state 7
    doc_comment                    shift and go to state 15

state 8

    (70) doc_comment -> GENERAL_CLOSE .

    XML_VERSION     reduce using rule 70 (doc_comment -> GENERAL_CLOSE .)
    OFFICE_DOCUMENT_OPEN reduce using rule 70 (doc_comment -> GENERAL_CLOSE .)
    COMMENT_OPEN    reduce using rule 70 (doc_comment -> GENERAL_CLOSE .)
    GENERAL_CLOSE   reduce using rule 70 (doc_comment -> GENERAL_CLOSE .)
    STRING          reduce using rule 70 (doc_comment -> GENERAL_CLOSE .)


state 9

    (1) doc_model -> XML_VERSION doc_model .

    $end            reduce using rule 1 (doc_model -> XML_VERSION doc_model .)


state 10

    (3) doc_model -> OFFICE_DOCUMENT_OPEN office_model . OFFICE_DOCUMENT_CLOSE

    OFFICE_DOCUMENT_CLOSE shift and go to state 16


state 11

    (4) office_model -> OFFICE_MODEL_OPEN . model_nodes OFFICE_MODEL_CLOSE
    (5) model_nodes -> . MODEL_NODES_OPEN model_node model_nodes
    (6) model_nodes -> . model_node model_nodes
    (7) model_nodes -> . MODEL_NODES_CLOSE
    (8) model_node -> . MODEL_NODE_OPEN model_node
    (9) model_node -> . basic_info model_node
    (10) model_node -> . threats model_node
    (11) model_node -> . structure_security_policies model_node
    (12) model_node -> . structure_security_relationships model_node
    (13) model_node -> . MODEL_NODE_CLOSE
    (14) basic_info -> . BASIC_INFORMATION_OPEN basic_info
    (15) basic_info -> . component_name basic_info
    (16) basic_info -> . component_overview basic_info
    (17) basic_info -> . component_categories basic_info
    (18) basic_info -> . intrinsical_properties basic_info
    (19) basic_info -> . other_details basic_info
    (20) basic_info -> . BASIC_INFORMATION_CLOSE
    (38) threats -> . THREATS_OPEN threats
    (39) threats -> . threat threats
    (40) threats -> . THREATS_CLOSE
    (52) structure_security_policies -> . SECURITY_POLICIES_OPEN security_policies SECURITY_POLICIES_CLOSE
    (58) structure_security_relationships -> . SECURITY_RELATIONSHIP_OPEN security-relationships SECURITY_RELATIONSHIP_CLOSE
    (21) component_name -> . COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
    (31) component_overview -> . COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
    (28) component_categories -> . COMPONENT_CATEGORIES_OPEN component_categories
    (29) component_categories -> . component_category component_categories
    (30) component_categories -> . COMPONENT_CATEGORIES_CLOSE
    (22) intrinsical_properties -> . INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
    (23) intrinsical_properties -> . properties_color intrinsical_properties
    (24) intrinsical_properties -> . properties_material intrinsical_properties
    (25) intrinsical_properties -> . properties_height intrinsical_properties
    (26) intrinsical_properties -> . properties_weight intrinsical_properties
    (27) intrinsical_properties -> . INTRINSICAL_PROPERTIES_CLOSE
    (32) other_details -> . PROPERTIES_OTHER_OPEN PROPERTIES_OTHER_CLOSE
    (41) threat -> . THREAT_OPEN threat
    (42) threat -> . threat_name threat
    (43) threat -> . threat_description threat
    (44) threat -> . threat_vulnerabilities threat
    (45) threat -> . THREAT_CLOSE
    (33) component_category -> . COMPONENT_CATEGORY_OPEN COMPONENT_CATEGORY_CLOSE
    (34) properties_color -> . PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
    (35) properties_material -> . PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
    (36) properties_height -> . PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
    (37) properties_weight -> . PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE
    (46) threat_name -> . THREAT_NAME_OPEN str THREAT_NAME_CLOSE
    (47) threat_description -> . THREAT_DESCRIPTION_OPEN str THREAT_DESCRIPTION_CLOSE
    (48) threat_vulnerabilities -> . THREAT_VULNERABILITIES_OPEN threat_vulnerabilities
    (49) threat_vulnerabilities -> . threat_vulnerability threat_vulnerabilities
    (50) threat_vulnerabilities -> . THREAT_VULNERABILITIES_CLOSE
    (51) threat_vulnerability -> . VULNERABILITIES_VULNERABILITY_OPEN str VULNERABILITIES_VULNERABILITY_CLOSE

    MODEL_NODES_OPEN shift and go to state 48
    MODEL_NODES_CLOSE shift and go to state 54
    MODEL_NODE_OPEN shift and go to state 47
    MODEL_NODE_CLOSE shift and go to state 51
    BASIC_INFORMATION_OPEN shift and go to state 37
    BASIC_INFORMATION_CLOSE shift and go to state 23
    THREATS_OPEN    shift and go to state 33
    THREATS_CLOSE   shift and go to state 31
    SECURITY_POLICIES_OPEN shift and go to state 26
    SECURITY_RELATIONSHIP_OPEN shift and go to state 30
    COMPONENT_NAME_OPEN shift and go to state 56
    COMPONENT_OVERVIEW_OPEN shift and go to state 42
    COMPONENT_CATEGORIES_OPEN shift and go to state 50
    COMPONENT_CATEGORIES_CLOSE shift and go to state 19
    INTRINSICAL_PROPERTIES_OPEN shift and go to state 24
    INTRINSICAL_PROPERTIES_CLOSE shift and go to state 66
    PROPERTIES_OTHER_OPEN shift and go to state 28
    THREAT_OPEN     shift and go to state 38
    THREAT_CLOSE    shift and go to state 18
    COMPONENT_CATEGORY_OPEN shift and go to state 41
    PROPERTIES_COLOR_OPEN shift and go to state 46
    PROPERTIES_MATERIAL_OPEN shift and go to state 62
    PROPERTIES_HEIGHT_OPEN shift and go to state 65
    PROPERTIES_WEIGHT_OPEN shift and go to state 58
    THREAT_NAME_OPEN shift and go to state 59
    THREAT_DESCRIPTION_OPEN shift and go to state 53
    THREAT_VULNERABILITIES_OPEN shift and go to state 39
    THREAT_VULNERABILITIES_CLOSE shift and go to state 32
    VULNERABILITIES_VULNERABILITY_OPEN shift and go to state 36

    component_overview             shift and go to state 17
    other_details                  shift and go to state 20
    threat_description             shift and go to state 21
    component_category             shift and go to state 43
    basic_info                     shift and go to state 25
    threat_name                    shift and go to state 27
    properties_weight              shift and go to state 29
    threats                        shift and go to state 34
    model_node                     shift and go to state 35
    properties_material            shift and go to state 40
    model_nodes                    shift and go to state 22
    structure_security_policies    shift and go to state 44
    component_name                 shift and go to state 45
    threat                         shift and go to state 63
    intrinsical_properties         shift and go to state 49
    component_categories           shift and go to state 52
    properties_color               shift and go to state 55
    structure_security_relationships shift and go to state 57
    properties_height              shift and go to state 60
    threat_vulnerabilities         shift and go to state 61
    threat_vulnerability           shift and go to state 64

state 12

    (71) str -> STRING str .

    COMMENT_OPEN    reduce using rule 71 (str -> STRING str .)
    GENERAL_CLOSE   reduce using rule 71 (str -> STRING str .)
    STRING          reduce using rule 71 (str -> STRING str .)
    COMPONENT_NAME_CLOSE reduce using rule 71 (str -> STRING str .)
    THREAT_DESCRIPTION_CLOSE reduce using rule 71 (str -> STRING str .)
    PROPERTIES_MATERIAL_CLOSE reduce using rule 71 (str -> STRING str .)
    VULNERABILITIES_VULNERABILITY_CLOSE reduce using rule 71 (str -> STRING str .)
    COMPONENT_OVERVIEW_CLOSE reduce using rule 71 (str -> STRING str .)
    PROPERTIES_COLOR_CLOSE reduce using rule 71 (str -> STRING str .)
    PROPERTIES_WEIGHT_CLOSE reduce using rule 71 (str -> STRING str .)
    THREAT_NAME_CLOSE reduce using rule 71 (str -> STRING str .)
    PROPERTIES_HEIGHT_CLOSE reduce using rule 71 (str -> STRING str .)


state 13

    (68) doc_comment -> COMMENT_OPEN doc_comment .

    XML_VERSION     reduce using rule 68 (doc_comment -> COMMENT_OPEN doc_comment .)
    OFFICE_DOCUMENT_OPEN reduce using rule 68 (doc_comment -> COMMENT_OPEN doc_comment .)
    COMMENT_OPEN    reduce using rule 68 (doc_comment -> COMMENT_OPEN doc_comment .)
    GENERAL_CLOSE   reduce using rule 68 (doc_comment -> COMMENT_OPEN doc_comment .)
    STRING          reduce using rule 68 (doc_comment -> COMMENT_OPEN doc_comment .)


state 14

    (2) doc_model -> doc_comment doc_model .

    $end            reduce using rule 2 (doc_model -> doc_comment doc_model .)


state 15

    (69) doc_comment -> str doc_comment .

    XML_VERSION     reduce using rule 69 (doc_comment -> str doc_comment .)
    OFFICE_DOCUMENT_OPEN reduce using rule 69 (doc_comment -> str doc_comment .)
    COMMENT_OPEN    reduce using rule 69 (doc_comment -> str doc_comment .)
    GENERAL_CLOSE   reduce using rule 69 (doc_comment -> str doc_comment .)
    STRING          reduce using rule 69 (doc_comment -> str doc_comment .)


state 16

    (3) doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE .

    $end            reduce using rule 3 (doc_model -> OFFICE_DOCUMENT_OPEN office_model OFFICE_DOCUMENT_CLOSE .)


state 17

    (16) basic_info -> component_overview . basic_info
    (14) basic_info -> . BASIC_INFORMATION_OPEN basic_info
    (15) basic_info -> . component_name basic_info
    (16) basic_info -> . component_overview basic_info
    (17) basic_info -> . component_categories basic_info
    (18) basic_info -> . intrinsical_properties basic_info
    (19) basic_info -> . other_details basic_info
    (20) basic_info -> . BASIC_INFORMATION_CLOSE
    (21) component_name -> . COMPONENT_NAME_OPEN str COMPONENT_NAME_CLOSE
    (31) component_overview -> . COMPONENT_OVERVIEW_OPEN str COMPONENT_OVERVIEW_CLOSE
    (28) component_categories -> . COMPONENT_CATEGORIES_OPEN component_categories
    (29) component_categories -> . component_category component_categories
    (30) component_categories -> . COMPONENT_CATEGORIES_CLOSE
    (22) intrinsical_properties -> . INTRINSICAL_PROPERTIES_OPEN intrinsical_properties
    (23) intrinsical_properties -> . properties_color intrinsical_properties
    (24) intrinsical_properties -> . properties_material intrinsical_properties
    (25) intrinsical_properties -> . properties_height intrinsical_properties
    (26) intrinsical_properties -> . properties_weight intrinsical_properties
    (27) intrinsical_properties -> . INTRINSICAL_PROPERTIES_CLOSE
    (32) other_details -> . PROPERTIES_OTHER_OPEN PROPERTIES_OTHER_CLOSE
    (33) component_category -> . COMPONENT_CATEGORY_OPEN COMPONENT_CATEGORY_CLOSE
    (34) properties_color -> . PROPERTIES_COLOR_OPEN str PROPERTIES_COLOR_CLOSE
    (35) properties_material -> . PROPERTIES_MATERIAL_OPEN str PROPERTIES_MATERIAL_CLOSE
    (36) properties_height -> . PROPERTIES_HEIGHT_OPEN str PROPERTIES_HEIGHT_CLOSE
    (37) properties_weight -> . PROPERTIES_WEIGHT_OPEN str PROPERTIES_WEIGHT_CLOSE

    BASIC_INFORMATION_OPEN shift and go to state 37
    BASIC_INFORMATION_CLOSE shift and go to state 23
    COMPONENT_NAME_OPEN shift and go to state 56
    COMPONENT_OVERVIEW_OPEN shift and go to state 42
    COMPONENT_CATEGORIES_OPEN shift and go to state 50
    COMPONENT_CATEGORIES_CLOSE shift and go to state 19
    INTRINSICAL_PROPERTIES_OPEN shift and go to state 24
    INTRINSICAL_PROPERTIES_CLOSE shift and go to state 66
    PROPERTIES_OTHER_OPEN shift and go to state 28
    COMPONENT_CATEGORY_OPEN shift and go to state 41
    PROPERTIES_COLOR_OPEN shift and go to state 46
    PROPERTIES_MATERIAL_OPEN shift and go to state 62
    PROPERTIES_HEIGHT_OPEN shift and go to state 65
    PROPERTIES_WEIGHT_OPEN shift and go to state 58
